# Perfeed

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
_+data/pr_summary/: sqldb_store
perfeed/: config_loader.py
perfeed/data_stores/: __init__.py  base.py  main.py  storage_feather.py  storage_sqldb.py  utils.py
perfeed/git_providers/: base.py  github.py
perfeed/github/: provider.py
perfeed/llms/: base_client.py  ollama_client.py  openai_client.py
perfeed/log/: __init__.py
perfeed/models/: git_provider.py  pr_summary.py
perfeed/notebooks/: weekly_summary.ipynb  weekly_summary_demo.ipynb
perfeed/settings/: .secrets_template.toml  configs.toml  pr_summary_prompts.toml  weekly_summary_prompts.toml
perfeed/tools/: pr_summarizer.py  weekly_summarizer.py
perfeed/utils/: __init__.py  datastore.py  utils.py
src/github/: models.py  provider.py
src/llms/: base_client.py  ollama_client.py  openai_client.py
src/utils/: llm_endpoint.py
tests/: test_github_comment_to_thread.py  test_github_model.py  test_github_provider.py  test_llm_enpoint.py  test_pr_summarizer.py
