[tool.poetry]
name = "perfeed"
version = "0.1.0"
description = "Personalized, AI assistant that runs with your engineering teams"
authors = ["Perfeed Core"]
license = "MIT"
readme = "README.md"
packages = [{include = "perfeed"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
fastai = "^2.7.17"
ghapi = "^1.0.6"
openai = "^1.51.0"
ollama = "^0.3.3"
dynaconf = "^3.2.6"
tiktoken = "^0.8.0"
loguru = "^0.7.2"
ipykernel = "^6.29.5"
sqlalchemy = "^2.0.36"
pyarrow = "^18.0.0"
torch = { version = "2.0.1", source="pytorch"}
notebook = "^7.0.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
